# home-plants

./: .gitignore  DEPLOYMENT.md  check_registry.py  cleanup_entities.py  dashboard_plants.yaml  delete_watering_entities.py  find_watering_history.py  main.py  pyproject.toml
dashboard/: README.md  dashboard_plants.yaml  deploy_dashboard.sh  deploy_main_dashboard.sh  lovelace_clean.json
dashboard/backup/: lovelace.json
ha_integration/: __init__.py  button.py  config_flow.py  const.py  data.py  datetime.py  event.py  manifest.json  number.py  select.py  sensor.py  strings.json  switch.py  text.py  valve.py
ha_integration/translations/: en.json
mcp/: __init__.py
mcp/prompts/: __init__.py  notifications.py  plants.py
mcp/resources/: __init__.py  notifications.py
mcp/tools/: __init__.py  plants.py
plants_mcp/: __init__.py
plants_mcp/prompts/: __init__.py
plants_mcp/resources/: __init__.py  notifications.py  plants.py
plants_mcp/tools/: __init__.py  analyze.py  automation.py  common.py  manage.py  plant_care.py  plants.py
